Add path in jsx APP, change parsing of data from db, and update display on frotend